2002-10-16  Derek Atkins  <derek@ihtfp.com>
	* add more debugging to new PostgresBackend functions

	* fix call to pgend_trans_rollback_edit()
	* fix call to pgend_trans_commit_edit()
	
2002-10-15  Derek Atkins  <derek@ihtfp.com>
	* Christian Krause's dialog-utils patch for style

	* Update the Backend API in the engine for better plugability.
	  Change the File, Net, and Postgres backends to use the new API.
	  Fixes bug 94648.

	* src/engine/engine-helpers.c: fix a compiler warning
	
2002-10-14  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sxsincelast.c (process_auto_create_list): Use
	the appropriate function for creating toCreateInstances to fix
	Bug#95637.
	(sxsld_get_future_created_txn_count): Added to assist in
	next-page-determination.
	(sxsld_disposition_changed): Correctly predicts
	post-processing/future txn count; fixes Bug#95734.

2002-10-14  Joshua Sled  <jsled@asynchronous.org>

	* src/app-utils/gnc-exp-parser.c (func_op): Remove
	seemed-like-a-bad-idea explicit negation of calculated values;
	fixes Bug#95781.

2002-10-14  Derek Atkins  <derek@ihtfp.com>
	* src/backend/file/test-xml-transaction.c -- use gnc_numeric_equal()
	  to compare split value and quantities in tests, because Splits can
	  adjust those values based on the commodity.

	* src/backend/file/test/test-file-stuff.c -- don't spew so much
	
	* src/test-core and src/engine/test-core should not be added to
	  the gnucash-build-env (noinst_ is a static library)

	* add library directories for "make check"
	
2002-10-14  Chris Lyttle  <chris@wilddev.net>

	* src/import-export/Makefile.am: fix make dist breakage
	* src/engine/Makefile.am: more fixes

2002-10-13  Chris Lyttle  <chris@wilddev.net>

	* accounts/fr_FR/Makefile.am: fix make dist breakage
	* rpm/gnucash.spec.in: update for release
	* configure.in: change to version 1.7.1
	* AUTHORS: moved Benoit to main developers
	* NEWS: added section for 1.7.1 release.
	
2002-10-13  David Hampton  <hampton@employees.org>
