@@ -1599,7 +1599,7 @@ Press 'Finish' now.</text>
 
     <widget>
       <class>GtkButton</class>
-      <name>button78</name>
+      <name>new_account_button</name>
       <can_focus>True</can_focus>
       <signal>
 	<name>clicked</name>
@@ -1662,7 +1662,7 @@ Press 'Finish' now.</text>
 
       <widget>
 	<class>GtkButton</class>
-	<name>button79</name>
+	<name>exec_now_button</name>
 	<can_default>True</can_default>
 	<can_focus>True</can_focus>
 	<label>Execute Now</label>
@@ -1671,7 +1671,7 @@ Press 'Finish' now.</text>
 
       <widget>
 	<class>GtkButton</class>
-	<name>button81</name>
+	<name>exec_later_button</name>
 	<can_default>True</can_default>
 	<can_focus>True</can_focus>
 	<label>Execute Later (unimpl.)</label>
@@ -1680,7 +1680,7 @@ Press 'Finish' now.</text>
 
       <widget>
 	<class>GtkButton</class>
-	<name>button82</name>
+	<name>cancel_button</name>
 	<can_default>True</can_default>
 	<can_focus>True</can_focus>
 	<stock_button>GNOME_STOCK_BUTTON_CANCEL</stock_button>
